--- a/Project-I-Social-Card/social-card/package.json
+++ b/Project-I-Social-Card/social-card/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "i": "^0.3.6",
+    "moment": "^2.23.0",
+    "npm": "^6.5.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
